--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "npm": "3.10.10",
+    "node": "6.10.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
