--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack",
-    "webpack": "webpack -w"
+    "webpack": "webpack -w",
+    "postinstall": "webpack"
   },
   "devDependencies": {},
   "scripts": {
