--- a/test/fixtures/stations.yml
+++ b/test/fixtures/stations.yml
@@ -2,13 +2,16 @@
 #
 # Table name: stations
 #
-#  id           :integer          not null, primary key
-#  station_name :string           not null
-#  description  :text
-#  image_url    :string           not null
-#  user_id      :integer          not null
-#  created_at   :datetime         not null
-#  updated_at   :datetime         not null
+#  id                 :integer          not null, primary key
+#  station_name       :string           not null
+#  description        :text
+#  user_id            :integer          not null
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#  image_file_name    :string
+#  image_content_type :string
+#  image_file_size    :integer
+#  image_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
