Update loggers to work on production only

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "webpack": "webpack -w",
     "postinstall": "webpack"
   },
-  "devDependencies": {    
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "repository": {
     "type": "git",
